2000-11-06  Adam Fedor  <fedor@gnu.org>

	* documentation.make: Remove conversion of tmpl.texi files to
	texi files (no longer necessary).

Mon Nov  6 16:43:22 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	* GNUmakefile.in (install): Create the
	System/Documentation/Developer and System/Documentation/User
	directories.
	* common.make (GNUSTEP_DOCUMENTATION): Changed to be
	$(GNUSTEP_INSTALLATION_DIR)/Documentation rather than
	$(GNUSTEP_INSTALLATION_DIR)/Libraries
	* rules.make: Added DOC_INSTALL_DIR and LATEX_FILES.
	* documentation.make: Major improvement.  Implemented installation
	and uninstallation of documentation, and support for LaTeX based
	documentation projects.
	
2000-11-04  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* configure.in: fixed gtar checking.

2000-10-29  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* framework.make (FRAMEWORK_WEBSERVER_RESOURCE_DIRS),
	(framework-components), (framework-webresource-dir): 
	(framework-webresource-files), (framework-localized-webresource-files):
	new specific gsweb targets.
	* subproject.make (framework-components), (framework-webresource-dir),
	(framework-webresource-files), (framework-localized-webresource-files):
	likewise.
	* rules.make (SUBPROJECT_ROOT_DIR): new variable.
	* gswapp.make ($(GSWAPP_FILE)): added ALL_FRAMEWORK_DIRS

2000-10-28  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* configure.in:  added --with-libxml-include, --with-libxml-library
	and --with-libiconv-library.
	Added -I/usr/local/include and -L/usr/local/lib for FreeBSD.

	* framework.make: new file.
	* common.make: added common frameworks defines (library, header paths).
	* bundle.make: added ALL_FRAMEWORKS_DIRS
	* rules.make: added frameworks headers flags. Prebuild framework
	header dir. Set framework name/dir/version.
	* subproject.make: build framework headers and resource files.
	* target.make: added SHARED_FRAMEWORK_LINK_CMD
	* tool.make: added ALL_FRAMEWORKS_DIRS
	* ld_lib_path.csh: added paths for frameworks.