@@ -1,3 +1,8 @@
+Tue Nov 14 23:47:11 2000  Adam Fedor  <fedor@yogi.doc.com>
+
+	* GNUstep.sh.in: Use grep instead of fgrep.
+	* ld_library_path.sh: Likewise
+
 2000-11-06  Adam Fedor  <fedor@gnu.org>
 
 	* documentation.make: Remove conversion of tmpl.texi files to
